force-app/main/default/objects/Order_Item__c/fields/Comment_to_dish__c.field-meta.xml
<CustomField>
    <fullName>Comment_to_dish__c</fullName>
    <label>Comment to dish</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>