force-app/main/default/objects/Order_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Dish__c</columns>
    <columns>Dish_Order__c</columns>
    <columns>Amount__c</columns>
    <columns>Comment_to_dish__c</columns>
    <columns>Item_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>